# artificial-rage

./: .clang-format  .gitignore  .kateproject  .kateproject.build  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  build.bat  build.sh  build_and_run.sh  clang-format  level.c  level.h  main.c  odinfmt.json  ols.json  player.c  player.h  raylib_changes.txt  run.bat  run.sh  settings.c  settings.h  xmake.lua
.dap/: launch.json
.github/: FUNDING.yml
.github/workflows/: cpp-linter.yaml
assets/: LICENSE
assets/levels/: level1.cfg
assets/weapons/: LICENSE.md
hooks/: pre-commit
include/: raylib.h
level/: level.c  level.h
other_assets/: enemy.ase  icon_pistol.ase  icon_railgun.ase  melee.ase  pistol.ase  shotgun.ase
other_assets/blend/: enemy.blend
other_assets/sprites/: icon_rifle.ase  icon_shotgun.ase  melee.ase  railgun.ase  rifle.ase
player/: player.c  player.h
settings/: settings.c
src/: .gitignore  CMakeLists.txt  Makefile  actor.c  actor.h  animator.c  animator.cpp  animator.h  build.bat  cmake_install.cmake  enemy.c  enemy.h  entity.c  entity.cpp  entity.h  game.c  game.cpp  game.h  hud.c  hud.cpp  hud.h  item.c  item.h  level.c  level.h  main.c  main.cpp  main.h  main.odin  player.c  player.cpp  player.h  player_hud.c  player_weapon.c  player_weapon.h  projectile.c  projectile.cpp  projectile.h  scene.c  scene.cpp  (+10 more)
src/assets/: LICENSE  enemy.blend  enemy.m3d  enemy_uvl.ase
src/assets/items/: LICENSE.md
src/assets/level1/: level.cfg
src/assets/levels/: level1.cfg
src/assets/models/: metal_box.m3d
src/assets/models/blend/: metal_box.blend
src/enemy/: enemy.c  enemy.h
src/game/: game.odin  hud.odin  menu.odin
src/game/animator/: animator.odin
src/game/entity/: animator.odin  enemy.odin  entity.odin  item.odin  item_ammo.odin  item_clutter.odin  item_health.odin  item_health_small.odin  item_key.odin  item_weapon.odin  player.odin  player_end.odin  player_start.odin  projectile.odin  textures.odin  wall_cargo.odin  wall_cargo_scuffed.odin  weapon.odin  weapon_melee.odin  weapon_pistol.odin  weapon_railgun.odin  weapon_rifle.odin  weapon_shotgun.odin
src/game/hud/: hud.odin
src/game/player/: player.odin
src/game/projectile/: projectile.odin
src/game/scene/: scene.odin
src/game/settings/: settings.odin
src/game/utilities/: utilities.odin
src/game/weapon/: weapon.odin
src/include/: raylib.h  raymath.h
src/item/: item.c  item.h
src/level/: level.c  level.h
src/player/: Makefile  player.c  player.h  player_weapon.c  player_weapon.h
src/settings/: settings.c  settings.h
src/utilities/: utilities.c  utilities.h
src_c/: .gitignore  game.c  game.h  main.c  player.c  projectile.h  scene.c  utilities.c  weapon.c
tiled_map_template/: TemplateLevel.cfg  artificial-rage_map_template.tiled-project  entities.json  generate.py  map_template.json
